src/objects/Key_Objective__c.object
<CustomObject>
    <fields>
        <fullName>App_Name__c</fullName>
        <label>App Name</label>
        <picklist>
            <picklistValues>
                <fullName>Physicians Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Select the category for this key objective</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Balance Sheet and Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnings and Margins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth and Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation, Compliance and Governance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe this KPI</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Measured_Unit__c</fullName>
        <inlineHelpText>Select the unit used for measurement</inlineHelpText>
        <label>Measured Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AED Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ratio%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_unit__c</fullName>
        <label>Reporting unit</label>
        <picklist>
            <picklistValues>
                <fullName>NA retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Key Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Physicians_Insurance</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>App_Name__c</field>
            <operation>equals</operation>
            <value>Physicians Insurance</value>
        </filters>
        <label>Physicians Insurance</label>
    </listViews>
    <nameField>
        <label>Key Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Objectives</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>